# cortexguard

./: .dockerignore  .dockerignore.prod  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  Taskfile.yml  docker-compose.demo.yaml  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.prd.yaml  pyproject.toml  tempo.yaml
.devcontainer/: .dockerignore  Dockerfile.dev  devcontainer.json
.github/workflows/: ci.yml
.vscode.backup/: launch.json  settings.json
cloud/agents/: drift_and_health_agent.py  human_interface_agent.py  orchestrator_agent.py  recovery_agent.py  state_estimator_agent.py
data/: README.md  anomaly_scenarios.yaml  download_dataset.py
data/manifests/: full_dataset_manifest.yaml  sample_dataset_manifest.yaml  sample_manifest.yaml
data/sample/subject_1_bagel/wrenches_poses_transforms/: 1_wrenches_poses.csv
data/schemas/: fused_event_schema.json
demo/: README.md  chaos_stream.py  fuse_trial.py  main.py  run_demo.sh  simulate_stream.py
demo/plans/: make_burger.yaml
docker/: cortexguard_alerts.yml  edge.Dockerfile  grafana_dashboard.json  grafana_dashboards.yaml  grafana_datasources.yaml  loki.yaml  prometheus.yml  promtail.yaml  simulator.Dockerfile  tempo.yaml
docs/: OPERATIONS.md  agents_overview.md  anomaly_scenarios.md  architecture.md  architecture_costs.md  architecture_mermaid.md  blackboard_persistence.md  capability_registry.md  design_decisions.md  edge_overview.md  metrics_spec.md  observability.md  simulator.md  testing_strategy.md
notebooks/: drift_analysis.ipynb  embedding_visualization.ipynb  evaluate_fusion.ipynb  evaluation.ipynb  explainability_plots.ipynb  feature_correlation.ipynb  scenario_replay.ipynb  visualize_fused_record.ipynb
scripts/: pyskel.py  run_simulator.sh
src/cortexguard/cloud/agents/: orchestrator_agent.py  state_estimator_agent.py
src/cortexguard/common/: constants.py  logging_config.py
src/cortexguard/core/interfaces/: base_cloud_agent_client.py  base_controller.py  base_detector.py  base_executor.py  base_online_learner.py  base_policy_engine.py  base_receiver.py  base_state_estimator.py  base_step_classifier.py  base_streamer.py  fusion_strategy.py
src/cortexguard/core/mocks/: mock_cloud_agent.py  mock_controller.py  mock_step_classifier.py
src/cortexguard/edge/: arbiter.py  constants.py  edge_fusion.py  http_receiver.py  local_receiver.py  mayday_agent.py  online_learner_state_estimator.py  orchestrator.py  river_online_learner.py  runtime.py  safety_agent.py  step_executor.py
src/cortexguard/edge/api/: health.py  ingestion.py  metrics.py
src/cortexguard/edge/detectors/: anomaly_detector.py
src/cortexguard/edge/models/: agent_tool_call.py  anomaly_event.py  blackboard.py  capability_registry.py  capability_registry.yaml  fusion_snapshot.py  goal.py  mayday_packet.py  plan.py  reasoning_trace_entry.py  remediation_policy.py  scene_graph.py  state_estimate.py
src/cortexguard/edge/observability/: opentelemetry_tracing.py
src/cortexguard/edge/persistence/: blackboard_snapshot.py  persistence_manager.py
src/cortexguard/edge/policy/: mistral_policy_engine.py  policy_agent.py
src/cortexguard/edge/utils/: async_priority_queue.py  metrics.py  tracing.py
src/cortexguard/simulation/: chaos_engine.py  manifest_loader.py  modalities_fuser.py  scenario_loader.py
src/cortexguard/simulation/fusion_strategies/: nearest_neighbor.py  windowed.py
src/cortexguard/simulation/models/: base_record.py  fused_record.py  trial.py  windowed_fused_record.py
src/cortexguard/simulation/streamers/: local_streamer.py  websocket_streamer.py
src/cortexguard/simulation/utils/: load_fused_records.py
src/kitchenwatch/cloud/agents/: drift_and_health_agent.py  human_interface_agent.py  recovery_agent.py
src/kitchenwatch/common/: constants.py  logging_config.py
src/kitchenwatch/core/: action_registry.py
src/kitchenwatch/core/interfaces/: base_cloud_agent_client.py  base_controller.py  base_detector.py  base_executor.py  base_policy_engine.py  base_receiver.py  base_state_estimator.py  base_step_classifier.py  base_streamer.py  fusion_strategy.py
src/kitchenwatch/core/mocks/: mock_cloud_agent.py  mock_controller.py  mock_step_classifier.py
src/kitchenwatch/edge/: arbiter.py  edge_fusion.py  http_receiver.py  local_edge_receiver.py  local_receiver.py  mayday_agent.py  online_learner_state_estimator.py  orchestrator.py  river_online_learner.py  runtime.py  safety_agent.py  step_executor.py
src/kitchenwatch/edge/api/: health.py  ingestion.py  main.py  metrics.py
src/kitchenwatch/edge/detectors/: anomaly_detector.py
src/kitchenwatch/edge/models/: action.py  goal.py  (+15 more)
src/kitchenwatch/simulation/: manifest_loader.py  modalities_fuser.py
tests/: integration_tests.py  latency_tests.py  safety_tests.py  scenario_tests.py  unit_tests.py
tests/e2e/: test_simulate_stream.py
tests/integration/: chaos_engine.py  scenario_loader.py  test_anomaly_scenarios.py  test_blackboard_persistence.py  test_latency_tracking.py  test_manifest_lookup.py  test_mayday_agent.py  test_mistral_policy_engine_real_llm.py  test_modalities_fuser.py  test_orchestrator_safety_integration.py  test_plan_execution.py
tests/unit/: test_action_registry.py
tests/unit/common/: test_logging_config.py
tests/unit/edge/: test_arbiter.py  test_async_priority_queue.py  test_blackboard_snapshot.py  test_capability_registry.py  test_edge_fusion.py  test_edge_fusion_no_ml.py  test_health_api.py  test_http_receiver.py  test_ingestion_api.py  test_local_receiver.py  test_mayday_agent.py  test_mistral_policy_engine.py  test_online_learner_state_estimator.py  test_orchestrator.py  test_persistence_manager.py  test_policy_agent.py  test_river_online_learner.py  test_runtime.py  test_safety_agent.py  test_step_executor.py
tests/unit/simulation/: test_download_dataset.py  test_fused_record.py  test_load_fused_records.py  test_local_streamer.py  test_manifest_loader.py  test_manifest_roundtrip.py  test_modalities_fuser.py  test_nearest_neighbor_fusion_strategy.py  test_windowed_fusion_strategy.py
(+28 files in other folders)
